# djangoquick

./: .env.example  README.md  pyproject.toml
app/: schema.yml  test_stage1.py  test_stage2.py  test_stage3.py
app/authenticate/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app/authenticate/migrations/: 0001_initial.py  0002_initial.py
app/companies/: admin.py  apps.py  helpers.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
app/companies/migrations/: 0001_initial.py
app/core/: settings.py  urls.py
app/inventory/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
app/inventory/migrations/: 0001_initial.py  0002_alter_supplier_inn_alter_supplier_title.py
app/sales/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
app/sales/migrations/: 0001_initial.py
